2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/gimpbrushgenerated-load.[ch]
	* app/core/gimpbrushgenerated-save.[ch]
	* app/core/gimpbrushpipe-load.[ch]: new files.

	* app/core/gimpbrushgenerated.[ch]
	* app/core/gimpbrushpipe.[ch]: removed loading and saving code here.

	* app/core/gimp.c: changed accordingly.

2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/gimppattern-load.[ch]: new files.

	* app/core/gimppattern.[ch]: removed the loading stuff here.

	* app/core/gimp.c: changed accordingly.

2006-10-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpgradient-load.h: keep the file extension defines
	here, just as we do it for brushes.

	* app/core/gimpgradient.h: removed them here.

	* app/core/gimpgradient.c: changed accordingly.

2006-10-03  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.[ch]
	(gimp_image_convert_set_dither_matrix): applied patch from David
	Gowers (bug #359175) and did some further cleanup.

2006-10-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/iwarp.c (iwarp_dialog): use a GimpHintBox.

2006-10-02  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptoolbox.[ch] (gimp_toolbox_new): changed Gimp
	parameter to GimpContext and use it instead of getting the user
	context from the Gimp.

	(toolbox_tool_button_toggled): set the tool on the dock's
	context instead of the user context.

	* app/dialogs/dialogs-constructors.c (dialogs_toolbox_get): pass
	the context to gimp_toolbox_new() instead of context->gimp.

2006-10-02  Jakub Steiner <jimmac@ximian.com>

	* stock-controller-midi*:
	* stock-controller-wheel*: start replacing mitch's masterpieces
	with these boring ones.

2006-10-02  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpstatusbar.c: remove the temp message idle source
	in GtkObject::destroy().

2006-10-01  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpcolordisplay.[ch]